@@ -1,5 +1,12 @@
 CHANGELOG - 0 Point for Drupal 6
 
+0 Point (Jun 27, 2013)
+-------------------------
+  Bug fixes:
+    o #537974: Collection of layout issues
+    o #776330: Taxonomy terms translation
+    o #1957716: A lot of errors "Call to undefined function i18nstrings()..."
+
 0 Point (Mar 26, 2013)
 -------------------------
   Bug fixes:
